Fixed line-height and spacing throughout app

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -55,4 +55,5 @@
     padding: $padding;
     font-size: 1.5em;
     text-align: left;
+    line-height: 1.5em;
 }
