--- a/src/styles/_modals.scss
+++ b/src/styles/_modals.scss
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  line-height: 1.2em;
   section {
     justify-content: center;
     margin: auto;
@@ -69,9 +70,10 @@
 .modalLink {
   border: 1px solid black;
   border-radius: 5px;
-  padding: 5px;
+  padding: 5px 5px 0px;
   margin: 10px;
   text-decoration: none;
+  line-height: 20px;
   cursor: pointer;
   transition: $transitionContact;
   &:hover {
